Update dependencies and use https