@@ -1,6 +1,4 @@
 /*
-	Copyright 2018 Marceau Dewilde <m@ceau.be>
-	
 	Licensed under the Apache License, Version 2.0 (the "License");
 	you may not use this file except in compliance with the License.
 	You may obtain a copy of the License at
@@ -16,8 +14,11 @@
 package be.ceau.digitalpodcast;
 
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse.BodyHandlers;
+import java.time.Duration;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -27,28 +28,35 @@ import org.slf4j.LoggerFactory;
 
 import be.ceau.opml.OpmlParseException;
 import be.ceau.opml.OpmlParser;
-import be.ceau.opml.entity.Opml;
 import be.ceau.opml.entity.Outline;
 
+/**
+ * Implementation of <a href="https://www.digitalpodcast.com/">Digital Podcast</a>
+ */
 public class DigitalPodcastAPI {
 
 	private static final Logger logger = LoggerFactory.getLogger(DigitalPodcastAPI.class);
 
-	private static final String DIRECTORY = "http://www.digitalpodcast.com/opml/digitalpodcast.opml";
-	private static final String DIRECTORY_NO_ADULT = "http://www.digitalpodcast.com/opml/digitalpodcastnoadult.opml";
-	private static final String DIRECTORY_CLEAN = "http://www.digitalpodcast.com/opml/digitalpodcastclean.opml";
-	private static final String NEW = "http://www.digitalpodcast.com/opml/digitalpodcastnew.opml";
-	private static final String NEW_NO_ADULT = "http://www.digitalpodcast.com/opml/digitalpodcastnewnoadult.opml";
-	private static final String NEW_CLEAN = "http://www.digitalpodcast.com/opml/digitalpodcastnewclean.opml";
-	private static final String MOST_VIEWED = "http://www.digitalpodcast.com/opml/digitalpodcastmostviewed.opml";
-	private static final String MOST_VIEWED_NO_ADULT = "http://www.digitalpodcast.com/opml/digitalpodcastmostviewednoadult.opml";
-	private static final String MOST_VIEWED_CLEAN = "http://www.digitalpodcast.com/opml/digitalpodcastmostviewedclean.opml";
-	private static final String TOP_RATED = "http://www.digitalpodcast.com/opml/digitalpodcasttoprated.opml";
-	private static final String TOP_RATED_NO_ADULT = "http://www.digitalpodcast.com/opml/digitalpodcasttopratednoadult.opml";
-	private static final String TOP_RATED_CLEAN = "http://www.digitalpodcast.com/opml/digitalpodcasttopratedclean.opml";
-	private static final String SUBSCRIBED = "http://www.digitalpodcast.com/opml/digitalpodcastmostsubscribed.opml";
-	private static final String SUBSCRIBED_NO_ADULT = "http://www.digitalpodcast.com/opml/digitalpodcastmostsubscribednoadult.opml";
-	private static final String SUBSCRIBED_CLEAN = "http://www.digitalpodcast.com/opml/digitalpodcastmostsubscribedclean.opml";
+	private static final String DIRECTORY = "https://www.digitalpodcast.com/opml/digitalpodcast.opml";
+	private static final String DIRECTORY_NO_ADULT = "https://www.digitalpodcast.com/opml/digitalpodcastnoadult.opml";
+	private static final String DIRECTORY_CLEAN = "https://www.digitalpodcast.com/opml/digitalpodcastclean.opml";
+	private static final String NEW = "https://www.digitalpodcast.com/opml/digitalpodcastnew.opml";
+	private static final String NEW_NO_ADULT = "https://www.digitalpodcast.com/opml/digitalpodcastnewnoadult.opml";
+	private static final String NEW_CLEAN = "https://www.digitalpodcast.com/opml/digitalpodcastnewclean.opml";
+	private static final String MOST_VIEWED = "https://www.digitalpodcast.com/opml/digitalpodcastmostviewed.opml";
+	private static final String MOST_VIEWED_NO_ADULT = "https://www.digitalpodcast.com/opml/digitalpodcastmostviewednoadult.opml";
+	private static final String MOST_VIEWED_CLEAN = "https://www.digitalpodcast.com/opml/digitalpodcastmostviewedclean.opml";
+	private static final String TOP_RATED = "https://www.digitalpodcast.com/opml/digitalpodcasttoprated.opml";
+	private static final String TOP_RATED_NO_ADULT = "https://www.digitalpodcast.com/opml/digitalpodcasttopratednoadult.opml";
+	private static final String TOP_RATED_CLEAN = "https://www.digitalpodcast.com/opml/digitalpodcasttopratedclean.opml";
+	private static final String SUBSCRIBED = "https://www.digitalpodcast.com/opml/digitalpodcastmostsubscribed.opml";
+	private static final String SUBSCRIBED_NO_ADULT = "https://www.digitalpodcast.com/opml/digitalpodcastmostsubscribednoadult.opml";
+	private static final String SUBSCRIBED_CLEAN = "https://www.digitalpodcast.com/opml/digitalpodcastmostsubscribedclean.opml";
+
+	private final OpmlParser opmlParser = new OpmlParser();
+	private final HttpClient httpClient = HttpClient.newBuilder()
+			.connectTimeout(Duration.ofSeconds(15L))
+			.build();
 
 	/**
 	 * @return a {@link Stream} over any {@link Podcast} found at {@value #DIRECTORY}
@@ -159,24 +167,27 @@ public class DigitalPodcastAPI {
 
 		try {
 
-			URL url = new URL(link);
+			var uri = URI.create(link);
 
-			try (InputStream in = url.openConnection().getInputStream()) {
+			var request = HttpRequest.newBuilder(uri)
+					.GET()
+					.build();
 
-				Opml opml = new OpmlParser().parse(in);
+			var response = httpClient.send(request, BodyHandlers.ofInputStream());
 
-				return opml.getBody()
-						.getOutlines()
-						.stream()
-						.flatMap(otl -> extractPodcasts(otl).stream());
+			var opml = opmlParser.parse(response.body());
 
-			}
+			return opml.getBody()
+					.getOutlines()
+					.stream()
+					.flatMap(otl -> extractPodcasts(otl).stream());
 
+		} catch (InterruptedException e) {
+			Thread.currentThread().interrupt();
+			throw new DigitalPodcastException(e);
 		} catch (OpmlParseException | IOException e) {
-			logger.error("read(String {})", link, e);
+			throw new DigitalPodcastException(e);
 		}
-
-		return Stream.empty();
 
 	}
 
